--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           context: images  # The path to Dockerfile
           file: images/rocky9.Dockerfile
-          push: ${{ github.event_name != 'pull_request' }}  # PR 时不推送
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
