--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -30,7 +30,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./images/rocky9.Dockerfile
+          file: ./images/rockylinux9.Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: username/repository:tag
           cache-from: type=gha
